// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Canvas adjusts the height when updating dimensions 1`] = `
<body>
  <div>
    <div
      class="canvas_container"
      id="canvas-container"
    >
      <div
        class="canvas_background"
      >
        <div
          class="canvas"
          data-testid="canvas"
          id="canvas"
          style="height: 1700px;"
        >
          <div />
          <div
            class="draggable"
            data-testid="draggable_b1f332f3-bdd3-4891-aec5-1843a712dbf1"
            style="left: 100px; top: 1200px;"
          />
        </div>
      </div>
    </div>
  </div>
</body>
`;

exports[`Canvas initializes the height to the lowest draggable 1`] = `
<body>
  <div>
    <div
      class="canvas_container"
      id="canvas-container"
    >
      <div
        class="canvas_background"
      >
        <div
          class="canvas"
          data-testid="canvas"
          id="canvas"
          style="height: 1590px;"
        >
          <div />
          <div
            class="draggable"
            data-testid="draggable_b1f332f3-bdd3-4891-aec5-1843a712dbf1"
            style="left: 100px; top: 1200px;"
          />
        </div>
      </div>
    </div>
  </div>
</body>
`;

exports[`Canvas reflows collisions 1`] = `
Array [
  Array [
    "061fc171-8b79-4636-b892-bd0ea5aa9b42",
  ],
]
`;

exports[`Canvas render default 1`] = `
<body>
  <div>
    <div
      class="canvas_container"
      id="canvas-container"
    >
      <div
        class="canvas_background"
      >
        <div
          class="canvas"
          data-testid="canvas"
          id="canvas"
          style="height: 0px;"
        >
          <div />
        </div>
      </div>
    </div>
  </div>
</body>
`;
